Adds start_date to mailer

--- a/app/views/inquiry_mailer/created_email.html.erb
+++ b/app/views/inquiry_mailer/created_email.html.erb
@@ -16,6 +16,7 @@
       <li> Peers: <%= @inquiry.peers %></li>
       <li> Email: <%= @inquiry.email %></li>
       <li> Flexible: <%= @inquiry.flexible %></li>
+      <li> Start date: <%= @inquiry.start_date %></li>
       <li> Phone: <%= @inquiry.phone %></li>
 
       <ul> Locations: 
