--- a/app/views/inquiry_mailer/submitter_email.html.erb
+++ b/app/views/inquiry_mailer/submitter_email.html.erb
@@ -3,6 +3,6 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>We have you covered! You are looking for an office for <%=Inquiry.last.size%> people and we will find one for you. Expect to hear from us within a day or two...</h1>
+    <h1>We received your inquiry and we have you covered! Our team will select the best offices for you, expect to hear from us withing a day or two. Meanwhile fell free to contact us, our phone is 031-123-4567</h1>
   </body>
 </html>
