--- a/app/views/inquiry_mailer/started_email.html.erb
+++ b/app/views/inquiry_mailer/started_email.html.erb
@@ -3,6 +3,10 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>We are trying to find you an office right now...idk</h1>
+    <h1>Hello <%= @inquiry.email %></h1>
+    <p>
+      I'm <%= @inquiry.broker.email %>, I have now started to work on your submission.
+      If you have any questions before I comeback to you. Then you can reach me on <%= @inquiry.broker.email %> or 031-123-4567
+    </p>
   </body>
 </html>
