modify email view

--- a/app/views/inquiry_mailer/started_email.html.erb
+++ b/app/views/inquiry_mailer/started_email.html.erb
@@ -5,7 +5,7 @@
   <body>
     <h1>Hello <%= @inquiry.email %></h1>
     <p>
-      I'm <%= @inquiry.broker.email %>, I have now started to work on your submission.
+      I'm <%= @inquiry.broker.name %>, I have now started to work on your submission.
       If you have any questions before I comeback to you. Then you can reach me on <%= @inquiry.broker.email %> or 031-123-4567
     </p>
   </body>
