text or call added to email for clients

--- a/app/views/inquiry_mailer/started_email.html.erb
+++ b/app/views/inquiry_mailer/started_email.html.erb
@@ -6,7 +6,7 @@
     <h1>Hello <%= @inquiry.email %></h1>
     <p>
       I'm <%= @inquiry.broker.name %>, I have now started to work on your submission.
-      If you have any questions before I comeback to you. Then you can reach me on <%= @inquiry.broker.email %> or 031-123-4567
+      If you have any questions before I comeback to you. You can reach me on <%= @inquiry.broker.email %> or text/call me at 031-123-4567
     </p>
   </body>
 </html>
