--- a/app/views/inquiry_mailer/submitter_email.html.erb
+++ b/app/views/inquiry_mailer/submitter_email.html.erb
@@ -3,6 +3,9 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>We received your inquiry and we have you covered! Our team will select the best offices for you, expect to hear from us withing a day or two. Meanwhile fell free to contact us, our phone is 031-123-4567</h1>
+    <h1>
+      We received your inquiry and we have you covered! Our team will select the best offices for you, expect to hear from us withing a day or two.
+    </h1>
+    <p>If you have any questions before I comeback to you. You can text or call me at 031-123-4567.</p>
   </body>
 </html>
